overflow/fixes

--- a/new-app/src/component/maincontainer/maincontainer.css
+++ b/new-app/src/component/maincontainer/maincontainer.css
@@ -2,5 +2,6 @@
     height: 100vh;
     width: calc(100vw - 224px);
     background-color:  #F2F2F2;
-    
+    max-height: 100vh;
+    overflow: scroll;
 }
