--- a/new-app/src/component/maincontainer/overview/overview.css
+++ b/new-app/src/component/maincontainer/overview/overview.css
@@ -1,5 +1,5 @@
 .overview{
-   height: 30vh;
+  /* height: 30vh; */
    width: 100%;  
 }
 
